--- a/PM-FE/resources/css/reusable.css
+++ b/PM-FE/resources/css/reusable.css
@@ -54,9 +54,10 @@ header {
 }
 
 .logo {
-    width: 90%;
+    width: 200px;
     float: left;
     margin-top: 3%;
+    margin-left: 2%;
 }
 
 #left-header {
