--- a/PM-FE/resources/css/style_chat.css
+++ b/PM-FE/resources/css/style_chat.css
@@ -43,7 +43,7 @@
     padding-bottom: 10px;
 }
 
- img {
+.content img {
     width: 50px;
     height: 50px;
     object-fit: cover;
@@ -180,6 +180,8 @@ input:focus,
 .incoming img {
     height: 25px;
     width: 25px;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 .incoming p {
