--- a/PM-FE/resources/css/colors.css
+++ b/PM-FE/resources/css/colors.css
@@ -5,6 +5,7 @@
     color: #1e4258;
     color: #2d5f5d;
     color: #e67e22;
+    color: linear-gradient(135deg,#1e4157f2 0%,#1597bb 100%);
     --header-color: hsl(203, 49%, 23%, 0.95);
     --text-color: #265077;
     --main-background: #F0F2EF;
