--- a/PM-FE/resources/css/reusable.css
+++ b/PM-FE/resources/css/reusable.css
@@ -14,7 +14,7 @@ html {
     text-decoration: none;
     font-family: "Lato", sans-serif;
     text-rendering: optimizeLegibility;
-    
+
 }
 
 body {
@@ -54,10 +54,10 @@ header {
 }
 
 .logo {
-    width: 190px;
+    /* width: 200px; */
     height: 90%;
     float: left;
-    margin-top: 4%;
+    margin-top: 1%;
 }
 
 #left-header {
@@ -78,6 +78,7 @@ header {
     align-items: center;
     display: flex;
     padding: 0 20px;
+    margin-left: -35%
 }
 
 .menu-icons {
@@ -85,17 +86,14 @@ header {
     width: 70px;
     height: 50px;
     cursor: pointer;
+    padding-right: 17%;
 }
 
-/* .menu-icons-link{
-    color: black;
-} */
-
-.menu-icons:hover div{
+.menu-icons:hover div {
     color: #E99346;
 }
 
-.menu-icons:hover h6{
+.menu-icons:hover h6 {
     color: #E99346;
 }
 
@@ -217,7 +215,7 @@ footer {
     color: white;
     padding: 5px 15px;
     border-radius: 5px;
-    background-color: hsl(203, 49%, 23%, 0.95);
+    background: linear-gradient(135deg,#1e4157f2 0%,#1597bb 100%);
     display: inline-block;
     text-align: center;
     transition: all 0.3s;
@@ -226,5 +224,88 @@ footer {
 
 .btn-post:hover,
 .btn-post:active {
-    background-color: #1597bb;
+    background: linear-gradient(135deg,#1597bb 0%,#94afc9 100%);
+}
+
+.modal {
+    z-index: 10;
+    background-color: #fff;
+    position: fixed;
+    top: 12%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    width: 30%;
+    max-width: 30%;
+    transition: 200ms ease-in-out;
+    transform: scale(0);
+    padding: 10px 15px;
+}
+
+.modal-header {
+    display: flex;
+}
+
+.modal-header .close-button {
+    cursor: pointer;
+    font-size: 2rem;
+    color: hsl(203, 49%, 23%, 0.95);
+    ;
+    border: none;
+    background: none;
+    outline: none;
+}
+
+.modal-header .close-button i {
+    font-size: 30px !important;
+}
+
+.modal .search-input {
+    width: 87%;
+    padding-left: 10px;
+    padding-right: 40px;
+    border-radius: 20px;
+    border: 1px solid hsl(203, 49%, 23%, 0.95);
+    outline: none;
+    margin: 0 15px;
+}
+
+.modal .search-input:focus {
+    border-radius: 20px;
+    border: 2px solid #1597bb;
+}
+
+.modal-header i {
+    cursor: pointer;
+    font-size: 1.3rem;
+    color: hsl(203, 49%, 23%, 0.95);
+    ;
+    border: none;
+    margin-left: -18%;
+    margin-top: 3%;
+    background: none;
+}
+
+.modal-header i:hover {
+    color: #1597bb;
+}
+
+#overlay {
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    pointer-events: none;
+  }
+  
+#overlay.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+
+.active {
+    transform: scale(1);
 }
