--- a/PM-FE/resources/css/style-account-setting.css
+++ b/PM-FE/resources/css/style-account-setting.css
@@ -12,7 +12,9 @@ h5 {
     padding-bottom: 10%;
     padding-top: 2px;
 }
-h1, h3 {
+
+h1,
+h3 {
     color: #1e4258;
 }
 
@@ -39,7 +41,6 @@ input:focus {
 }
 
 .selector {
-    background-image: url(/rsrc.php/v3/yP/r/Yrq8Y9PlN02.png);
     background-position: right 5px center;
     background-repeat: no-repeat;
     background-size: 14px;
@@ -84,10 +85,16 @@ nav a {
 
 nav a:hover,
 nav a:active {
-    transform: scale(1.2);
+    transform: scale(1.1);
     cursor: pointer;
     color: #2d6187;
     background-color: #d8e3e7;
+}
+
+.tab-active {
+    color: #2d6187;
+    background-color: #d8e3e7;
+    transform: scale(1.1);
 }
 
 .setting-title {
@@ -101,20 +108,30 @@ nav a:active {
     line-height: 40px;
 }
 
-#main-avatar{
-    margin: 0 auto;
-    background-color:transparent;
-    position: relative;
-    transform: translate(12%, 0);
+.avt-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#main-avatar img{
+#main-avatar {
+    margin: 0 auto;
+    background-color: transparent;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#main-avatar img {
     display: block;
-    width: 70%;
+    height: 80%;
+    width: 80%;
     background-color: white;
     border: 1px solid #2d6187;
     border-radius: 50%;
     margin-bottom: 7%;
+    object-fit: cover;
 }
 
 .tab-show {
@@ -125,9 +142,9 @@ nav a:active {
 .btn-add {
     text-decoration: none;
     color: white;
-    padding: 5px 5px;
-    border-radius: 5px;
-    background-color: hsl(203, 49%, 23%, 0.95);
+    padding: 10px 10px;
+    border-radius: 20px;
+    background: linear-gradient(135deg, #1e4157f2 0%, #1597bb 100%);
     display: inline-block;
     text-align: center;
     transition: all 0.3s;
@@ -138,5 +155,356 @@ nav a:active {
 
 .btn-add:hover,
 .btn-add:active {
-    background-color: #1597bb;
+    background: linear-gradient(135deg, #1597bb 0%, #203949f2 100%);
 }
+
+.avt-modal {
+    z-index: 10;
+    background-color: #fff;
+    position: fixed;
+    top: 12%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+
+    transition: 200ms ease-in-out;
+    transform: scale(0);
+    padding: 15px 15px;
+    height: 85%;
+    width: 45%;
+    left: 27%;
+}
+
+.avt-modal .wrapper {
+    height: 65%;
+    width: 100%;
+    border-radius: 10px;
+    border: 2px dashed #c2cdda;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+}
+
+.wrapper .image {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.wrapper .image img {
+    border: 1px solid #265077;
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+}
+
+.wrapper .icon {
+    font-size: 100px;
+    color: hsl(203, 49%, 23%, 0.95);
+}
+
+.wrapper .text {
+    font-size: 20px;
+    color: #265077;
+    font-weight: 500;
+}
+
+#close-button {
+    font-size: 20px;
+    color: #1e4157f2;
+    cursor: pointer;
+    margin-bottom: 3%;
+    margin-left: 96%;
+}
+
+.container #custom-btn,
+.container .close-button,
+.cancel-btn {
+    border: none;
+    font-size: 16px;
+    letter-spacing: 1px;
+    cursor: pointer;
+    outline: none;
+    border-radius: 7px;
+    margin-top: 3%;
+    transition: all 0.3s;
+}
+
+.container #custom-btn {
+    width: 100%;
+    height: 10%;
+    display: block;
+    background: linear-gradient(135deg, #1e4157f2 0%, #1597bb 100%);
+    font-weight: 500;
+    color: #fff;
+}
+
+.container #custom-btn:hover,
+.container #custom-btn:active {
+    background: linear-gradient(135deg, #1597bb 0%, #265077 100%);
+}
+
+.container .close-button {
+    width: 47%;
+    height: 10%;
+    background-color: #E8E9EB;
+    color: #1e4157f2;
+}
+
+.cancel-btn {
+    width: 47%;
+    height: 10%;
+    background-color: #E8E9EB;
+    color: #1e4157f2;
+    margin-right: 5%;
+}
+
+.container .close-button:hover,
+.cancel-btn:hover,
+.container .close-button:active .cancel-btn:active {
+    background: linear-gradient(135deg, #1e4157f2 0%, #1597bb 100%);
+    color: #fff
+}
+
+.btn-save,
+.btn-cancel {
+    border: none;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding: 7px;
+    width: 100px;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.3s;
+    margin-top: 3%;
+}
+
+.btn-save {
+    border-radius: 7px 0 0 7px;
+    background: linear-gradient(135deg, #1e4157f2 0%, #1597bb 100%);
+    font-weight: 500;
+    color: #fff;
+    margin-right: 0.5%;
+}
+
+.btn-cancel {
+    border-radius: 0 7px 7px 0;
+    margin-top: 3%;
+    background: #ccd0d5;
+    font-weight: 500;
+    color: #1e4258;
+}
+
+.btn-save:hover,
+.btn-save:active {
+    background: linear-gradient(135deg, #1597bb 0%, #1e4157f2 100%);
+    transform: scale(1.1);
+}
+
+.btn-cancel:hover,
+.btn-cancel:active {
+    background: linear-gradient(135deg, #1597bb 0%, #1e4157f2 100%);
+    transform: scale(1.1);
+    color: #fff;
+}
+
+/*-----------------TABLE STYLE --------------------*/
+
+.limiter {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.container-table100 {
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 33px 30px;
+}
+
+.wrap-table100 {
+    width: 1170px;
+}
+
+table {
+    border-spacing: 1;
+    border-collapse: collapse;
+    background: white;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    margin-left: -5%;
+    position: relative;
+}
+
+table * {
+    position: relative;
+}
+
+table td,
+table th {
+    padding-left: 8px;
+}
+
+table thead tr {
+    height: 60px;
+    background: #1e4157f2;
+}
+
+table tbody tr {
+    height: 50px;
+}
+
+table tbody tr:last-child {
+    border: 0;
+}
+
+table td,
+table th {
+    text-align: left;
+}
+
+table td.l,
+table th.l {
+    text-align: right;
+}
+
+table td.c,
+table th.c {
+    text-align: center;
+}
+
+table td.r,
+table th.r {
+    text-align: center;
+}
+
+
+.table100-head th {
+    font-family: OpenSans-Regular;
+    font-size: 18px;
+    color: #fff;
+    line-height: 1.2;
+    font-weight: unset;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #f5f5f5;
+}
+
+tbody tr {
+    font-size: 15px;
+    color: #808080;
+    line-height: 1.2;
+    font-weight: unset;
+}
+
+tbody tr:hover {
+    color: #1e4258;
+    background-color: #d8e3e7;;
+    cursor: pointer;
+}
+
+.column1, .column2, .column3, .column4, .column5{
+    padding: 10px;
+}
+
+@media screen and (max-width: 992px) {
+    table {
+        display: block;
+    }
+
+    table>*,
+    table tr,
+    table td,
+    table th {
+        display: block;
+    }
+
+    table thead {
+        display: none;
+    }
+
+    table tbody tr {
+        height: auto;
+        padding: 37px 0;
+    }
+
+    table tbody tr td {
+        padding-left: 40% !important;
+        margin-bottom: 24px;
+    }
+
+    table tbody tr td:last-child {
+        margin-bottom: 0;
+    }
+
+    table tbody tr td:before {
+        font-size: 14px;
+        color: #999999;
+        line-height: 1.2;
+        font-weight: unset;
+        position: absolute;
+        width: 40%;
+        left: 30px;
+        top: 0;
+    }
+
+    table tbody tr td:nth-child(1):before {
+        content: "IP";
+    }
+
+    table tbody tr td:nth-child(2):before {
+        content: "Started";
+    }
+
+    table tbody tr td:nth-child(3):before {
+        content: "Last Access";
+    }
+
+    table tbody tr td:nth-child(4):before {
+        content: "Expires";
+    }
+
+    table tbody tr td:nth-child(5):before {
+        content: "Clients";
+    }
+
+    .column4,
+    .column5,
+    .column6 {
+        text-align: left;
+    }
+    .column4,
+    .column5,
+    .column6,
+    .column1,
+    .column2,
+    .column3 {
+        width: 100%;
+    }
+    tbody tr {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 576px) {
+    .container-table100 {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
+
+/*-------------------------------------------------*/
