--- a/PM-FE/resources/css/reusable.css
+++ b/PM-FE/resources/css/reusable.css
@@ -86,7 +86,10 @@ header {
     width: 70px;
     height: 50px;
     cursor: pointer;
-    padding-right: 17%;
+}
+
+.profile img {
+    border-radius: 50%;
 }
 
 .menu-icons:hover div {
@@ -227,12 +230,14 @@ footer {
     background: linear-gradient(135deg,#1597bb 0%,#94afc9 100%);
 }
 
+/*----------------POP UP CSS-----------------*/
+
 .modal {
     z-index: 10;
     background-color: #fff;
     position: fixed;
     top: 12%;
-    left: 20%;
+    left: 28%;
     transform: translate(-50%, -50%);
     width: 30%;
     max-width: 30%;
@@ -308,4 +313,101 @@ footer {
 
 .active {
     transform: scale(1);
+}
+
+/*-------------------USER ACCOUNT DROPDOWN MENU CSS------------------------------*/
+
+.dropdown-menu {
+    position: absolute;
+    top: 110%;
+    margin-right: -0.5%;
+    background-color: #fff;
+    /* box-sizing: 0 5px 25px rgba(0, 0, 0, 0.1); */
+    border-radius: 12px;
+    transition: 0.5s;
+    width: 24%;
+    border: 0.1px solid #c7cfd4;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.dropdown-menu.active {
+    visibility: visible;
+    opacity: 1;
+}
+
+.dropdown-menu::before {
+    content: '';
+    position: absolute;
+    top: -3%;
+    right: 13%;
+    width: 15px;
+    height: 15px;
+    background-color: #fff;
+    transform: rotate(45deg);
+    border-left: 0.1px solid #c7cfd4;
+    border-top: 0.1px solid #c7cfd4;
+}
+
+.dropdown-menu .profile img {
+    width: 22%;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.dropdown-menu .profile {
+   display: flex;
+   margin: 5%;
+   background: none;
+}
+
+.dropdown-menu .profile h3 {
+    color: #265077;
+    width: 100%;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.2rem;
+    padding: 0 10px;
+}
+
+.dropdown-menu .profile h3 span {
+    font-size: 0.8rem;
+    color: #5c5959;
+    font-weight: 300;
+}
+
+.setting-list {
+    margin: 2% 8%;
+    background: none;
+}
+
+.dropdown-menu ul li {
+    list-style: none;
+    padding: 10px 0;
+    border-top: 1px solid rgba(0,0,0,0.1);
+    display: flex;
+    align-items: center;
+    color: #265077;
+}
+
+.dropdown-menu ul li i {
+    margin-right: 5%;
+}
+
+.dropdown-menu ul li a {
+    color: #265077;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: 500;
+    transition: 0.5s;
+}
+
+.dropdown-menu ul li a:hover {
+    text-decoration: underline;
+    color: #2d6187;
+}
+
+.dropdown-btn {
+    background: none;
+    border: none;
 }
