--- a/PM-FE/resources/css/style_sign_up.css
+++ b/PM-FE/resources/css/style_sign_up.css
@@ -3,18 +3,15 @@
     background-color: #f4f4f4;
     position: relative;
     width: 50%;
-    /* min-width: 400px; */
     height: 110%;
     top: 50%;
     left: 50%;
     text-align: center;
     line-height: 20px;
-    /* padding: 2%; */
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     vertical-align: center;
     transform: translate(-55%, 0);
-    margin: -2%;
 }
 
 #sign-up-form h1 {
@@ -80,7 +77,7 @@
 .notes {
     color: #777;
     font-size: 14px;
-    padding-left: 4%;
+    padding: 4%;
     padding-top: 2%;
     padding-bottom: 2%;
 }
